Update and rename indexx.html to index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</article>
         <article>
 			<h2>OTHER HTML</h2>
-            <a href="index.html">Poem!</a>
+            <a href="poem.html">Poem!</a>
             <a href="wishlist.html">Wishlist!</a>
             </div>
 		</article>
